edited the view

--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Jordy's FreeCodeCamp Stock Price Checker</title>
+    <title>Stock Price Checker</title>
     <meta name="description" content="A stock price checker made by Jordy">
     <meta charset="utf-8">
     <link rel="stylesheet" href="./public/style.css">
@@ -11,7 +11,7 @@
   <body>
     <header>
       <h1>
-        Jordy's FreeCodeCamp Stock Price Checker
+        Stock Price Checker
       </h1>
     </header>
     <div id="container">
@@ -47,9 +47,9 @@
       <code id='jsonResult'></code>
   </div>
     <footer>
-      Created by <a href="https://www.freecodecamp.org/jordyf">Jordy Ferdian</a>  
-      <button onclick="location.href='https://github.com/jordyf15'" class="fa fa-github fa-lg"></button>
-      <button onclick="location.href='https://www.linkedin.com/in/jordy-ferdian-3606041a7'" class="fa fa-linkedin-square fa-lg"></button><br>
+      Created by <a href="https://www.freecodecamp.org/jordyf">SHYAM</a>  
+      <button onclick="location.href='https://github.com/SHYAM-001'" class="fa fa-github fa-lg"></button>
+      <button onclick="location.href='https://www.linkedin.com/in/shyam-kathir-360713224/'" class="fa fa-linkedin-square fa-lg"></button><br>
       For FreeCodeCamp <a href="https://www.freecodecamp.org/learn/information-security/information-security-projects/stock-price-checker">
           Stock Price Checker</a> project
     </footer>
